[package]
name = "bubu2bubu-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bubu2bubu-server"
path = "src/main.rs"

[dependencies]
snow = "0.9"
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
hex = "0.4"
